Bug: Boostrap 5- Collapse with form-select or dropdown does not work. Fixed with manual js implementation using css display.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -47,7 +47,6 @@ td.yes{
 
 #activate{
     display: inline-block;
-    position:relative;
-    top:-50%;
-    left:auto/2;
+    position:absolute;
+    top:72%;
 }
